--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@
 nbprojects/
 .project/
 cmake-build-debug/
+CMakeFiles/
+
+cmake_install.cmake
+CMakeCache.txt
+Makefile
+lexer
 
 # Prerequisites
 *.d
